--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@
             width: 365px;
             margin-top: 26px;
             margin-left: 5%;
-            box-shadow: 0 3px 3px rgb(183, 182, 182);
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
             border: 2px solid white;
             border-radius: 4px;
             height: 2.3rem;
