--- a/query.css
+++ b/query.css
@@ -245,14 +245,15 @@ width: 16.5rem;
 #Filterremoving {
     position: absolute;
     right: 132px;
-  
+  font-size: 14px;
     width: 120px;
    
 }
 #selectionbox {
     position: absolute;
-    right: 20%;
-    width: 8%;
+    right: 145px;
+    width: 65px;
+    font-size: 14px;
    
 }
 }
@@ -274,16 +275,30 @@ width: 16.5rem;
         position: absolute;
         right: 15%;
         width: 20%;
-        
+        font-size: 13px;
     }
-        #selectionbox {
-            position: absolute;
+        
+        /* #selectionbox {   
+          position: absolute; 
             right: 3%;
-            top: 264%;
-            width: 11%;
-           
+             top: 56.7rem; 
+             width: 11%;
+           font-size: 13px; 
         
+    } */
+     #selectionbox {
+    font-size: 13px;
+          position: relative;
+        right: -41%;
+        top: -2rem;
+        width: 16%;
+        height: 23px;
+    }   
+    #homeicon{
+        margin: -4px -180px;
     }
+    
+        
     .form-group {
        margin: 5% 0%;
         font-size: 13px;
@@ -337,7 +352,7 @@ width: 16.5rem;
     width: 90px;
 }
 #homeicon {
-    margin: -0.8% 2%;
+    margin: -0.8% -36%;
 }
 .selectbox {
     width: 140%;
@@ -369,16 +384,27 @@ width: 16.5rem;
     position: absolute;
     right: 50px;
     width: 127px;
+    font-size: 13px;
     
 }
-    #selectionbox {
+    /* #selectionbox {
         position: absolute;
         right: -25px;
         top: 56.7rem;
         width: 15%;
-       
+       font-size: 13px;
     
-}
+} */
+
+#selectionbox {
+    font-size: 13px;
+          position: relative;
+        right: -41%;
+        top: -2rem;
+        width: 16%;
+        height: 23px;
+    }
+
 .i0{
     display: none;
 }
@@ -449,22 +475,32 @@ width: 16.5rem;
     }
     #Filterremoving {
         position: absolute;
-        right: 24px;
-        width: 100px;
+        right: 18px;
+        width: 110px;
         height: 25px;
-        font-size: 10px;
+        font-size: 12px;
         
     }
-        #selectionbox {
+         /* #selectionbox {
             position: absolute;
             right: -69px;
             top: 57.6rem;
             width: 55px;
             height: 20px;
             font-size: 10px
-           
-        
-    }
+             
+    }  */
+
+    #selectionbox {
+        font-size: 13px;
+              position: relative;
+            right: -33%;
+            top: -2rem;
+            width: 58px;
+            height: 23px;
+        }
+    
+
     .h4{
         font-size: 65%;
     margin: 2% 0%;
@@ -480,9 +516,16 @@ width: 16.5rem;
         display: none;
     }
         #homeicon {
-            margin: -1% 2%;
+            margin: -1% -157px;
         }
         navbar{
             width: 103%;
         }
+}
+
+@media only screen and (min-device-width: 400px) and (max-device-width:493px){
+    #selectionbox{
+        right: -47%;
+    }
+
 }
